# bandit

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  compression_demo.cpp
include/bandit/: error.h  stream_compressor.h  stream_compressor.hpp  stream_decompressor.h  stream_decompressor.hpp
src/: stream_compressor.cpp  stream_decompressor.cpp
